Add cooldown. Implement configuration system and add crates.yml & messages.yml.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,48 +1,2 @@
-# vCrates - Configuration file
+# vCrates - Main configuration
 # By VulpineFriend87
-
-# Crates
-crates:
-  example:
-    blocks: []
-    name: Example Crate
-    cooldown: 0
-    keys:
-      required: true
-      allowed:
-        - example
-    pushback:
-      enabled: true
-      distance: 4
-    effect:
-      enabled: true
-      type: AURA
-      color: RED
-      particle: ELECTRIC_SPARK
-    hologram:
-      enabled: true
-      lines:
-        - "&9&lEXAMPLE CRATE"
-        - "&7Left click to preview"
-        - "&7Right click to open"
-    milestone:
-      repeats: false
-      list:
-        - after: 5
-          rewards:
-            - example
-        - after: 10
-          rewards:
-            - example
-    rewards:
-      example:
-        name: "&9&lEXAMPLE REWARD"
-        lore:
-          - "&7This is an example reward"
-        display_item: DIAMOND_BLOCK
-        items:
-          - name: "&9&lEXAMPLE ITEM"
-            type: DIAMOND_BLOCK
-            amount: 1
-        commands:
-          - say example
