Implement command and reload system, move method from KeyUtils to CrateKeys, implement ActionParser placeholders, refactored MessagesConfiguration in ResponsesConfiguration, implement crate pushback.

--- a/src/main/resources/crates.yml
+++ b/src/main/resources/crates.yml
@@ -10,7 +10,8 @@ example:
     allowed: []
   pushback:
     enabled: true
-    distance: 4
+    y_offset: -0.4
+    multiply: -1.25
   effect:
     enabled: true
     type: AURA
