--- a/pom.xml
+++ b/pom.xml
@@ -87,5 +87,16 @@
             <artifactId>EasyUtils</artifactId>
             <version>1.3.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>6.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.3.232</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
