--- a/src/main/resources/responses.yml
+++ b/src/main/resources/responses.yml
@@ -84,3 +84,4 @@ player_not_found: "&7[&3v&bCrates&7] &cPlayer not found."
 invalid_amount: "&7[&3v&bCrates&7] &cInvalid amount."
 only_players: "&7[&3v&bCrates&7] &cOnly players can use this command."
 player_not_online: "&7[&3v&bCrates&7] &cPlayer is not online."
+no_permission: "&7[&3v&bCrates&7] &cYou don't have permission to use this command."
