Fix rarity selection bug in crate opening

--- a/src/main/resources/responses.yml
+++ b/src/main/resources/responses.yml
@@ -85,3 +85,5 @@ invalid_amount: "&7[&3v&bCrates&7] &cInvalid amount."
 only_players: "&7[&3v&bCrates&7] &cOnly players can use this command."
 player_not_online: "&7[&3v&bCrates&7] &cPlayer is not online."
 no_permission: "&7[&3v&bCrates&7] &cYou don't have permission to use this command."
+error: "&7[&3v&bCrates&7] &cAn error occurred. Please contact a server administrator."
+no_rewards: "&7[&3v&bCrates&7] &cNo rewards available."
