Clean Reward code

--- a/src/main/resources/crates.yml
+++ b/src/main/resources/crates.yml
@@ -46,9 +46,11 @@
 #   rewards: # List of rewards
 #     example: # Reward identifier
 #       name: "&9&lEXAMPLE REWARD" # Display name of the reward (used in placeholders)
-#       lore:
-#         - "&7This is an example reward"
-#       display_item: DIAMOND_BLOCK # Display item of the reward
+#       display_item: # Display item of the reward
+#         type: DIAMOND_BLOCK
+#         amount: 1 # Item amount
+#         lore: # Lore of the item
+#           - "&7This is an example reward"
 #       rarity: common # Rarity of the reward (rarities.yml)
 #       items: # List of items that will be given to the player when they win this reward
 #         - name: "&9&lEXAMPLE ITEM" # Display name of the item
