--- a/src/main/resources/crates.yml
+++ b/src/main/resources/crates.yml
@@ -21,6 +21,7 @@
 #     particle: CRIT # Particle of the effect
 #     radius: 1 # Radius of the effect
 #     speed: 1 # Speed of the effect in seconds
+#     y_offset: 0 # Y offset of the effect
 #   hologram: # Displays a hologram when the crate is opened
 #     enabled: true # Is hologram enabled?
 #     y_offset: 0 # Y offset of the hologram
